# MeshShare

./: README.md  pyproject.toml
meshshare/: __init__.py  app.py  cli.py  file_dialog.py  file_transfer.py  protocol.py  settings.py  transport.py
meshshare.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_file_transfer.py  test_protocol.py  test_settings_transport.py
